--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Este proyecto será para puras prácticas por el momento...
 ¡Y así poder practicar mucho!
-Ahorita estoy en branch foo_feature
+Ahorita estoy en branch master
 
 
